tests/ported/snapshots/tests__ported__c_tests__sample_100_binary.snap
---
source: tests/ported/c_tests.rs
expression: sbdf
---
Sbdf(
  file_header: FileHeader(
    major_version: 1,
    minor_version: 0,
  ),
  table_metadata: TableMetadata(
    metadata: [
      Metadata(
        name: "SbdfTest.TableMetaBinary",
        value: Binary([
          1,
        ]),
        default_value: None,
      ),
    ],
    columns: [
      ColumnMetadata(
        name: "Binary",
        ty: Binary,
        other: [
          Metadata(
            name: "SbdfTest.ColumnMetaBinary0",
            value: Binary([
              1,
            ]),
            default_value: None,
          ),
        ],
      ),
    ],
  ),
  table_slices: [
    TableSlice(
      column_slices: [
        ColumnSlice(
          values: Plain(
            value: BinaryArray([
              [
                33,
                34,
                35,
              ],
              [
                37,
                38,
              ],
              [],
              [
                41,
              ],
              [
                43,
                44,
                45,
              ],
              [],
              [],
              [
                51,
              ],
              [
                53,
                54,
                55,
              ],
              [
                57,
                58,
              ],
              [],
              [],
              [],
              [
                67,
                68,
              ],
              [],
              [
                71,
              ],
              [
                73,
                74,
                75,
              ],
              [
                77,
                78,
              ],
              [],
              [],
              [],
              [
                87,
                88,
              ],
              [],
              [
                91,
              ],
              [
                93,
                94,
                95,
              ],
              [
                97,
                98,
              ],
              [],
              [
                101,
              ],
              [
                103,
                104,
                105,
              ],
              [],
              [],
              [
                111,
              ],
              [
                113,
                114,
                115,
              ],
              [],
              [],
              [
                121,
              ],
              [
                123,
                124,
                125,
              ],
              [
                127,
                128,
              ],
              [],
              [
                131,
              ],
              [],
              [
                137,
                138,
              ],
              [],
              [
                141,
              ],
              [
                143,
                144,
                145,
              ],
              [
                147,
                148,
              ],
              [],
              [],
              [
                153,
                154,
                155,
              ],
              [
                157,
                158,
              ],
              [],
              [
                161,
              ],
              [
                163,
                164,
                165,
              ],
              [
                167,
                168,
              ],
              [],
              [
                171,
              ],
              [],
              [
                177,
                178,
              ],
              [],
              [
                181,
              ],
              [
                183,
                184,
                185,
              ],
              [],
              [],
              [
                191,
              ],
              [
                193,
                194,
                195,
              ],
              [],
              [],
              [
                201,
              ],
              [],
              [
                207,
                208,
              ],
              [],
              [
                211,
              ],
              [
                213,
                214,
                215,
              ],
              [
                217,
                218,
              ],
              [],
              [],
              [
                223,
                224,
                225,
              ],
              [
                227,
                228,
              ],
              [],
              [
                231,
              ],
              [
                233,
                234,
                235,
              ],
              [
                237,
                238,
              ],
              [],
              [],
              [
                243,
                244,
                245,
              ],
              [
                247,
                248,
              ],
              [],
              [
                251,
              ],
              [
                253,
                254,
                255,
              ],
              [],
              [],
              [
                5,
              ],
              [],
              [
                11,
                12,
              ],
              [],
              [
                15,
              ],
              [],
              [
                21,
                22,
              ],
              [],
              [
                25,
              ],
            ]),
          ),
          properties: [
            Property(
              name: "IsInvalid",
              values: BitArray(
                bit_count: 100,
                bytes: [
                  4,
                  8,
                  16,
                  32,
                  64,
                  128,
                  2,
                  4,
                  8,
                  16,
                  32,
                  64,
                  128,
                ],
              ),
            ),
            Property(
              name: "ErrorCode",
              values: Plain(
                value: StringArray([
                  "",
                  "",
                  "Error 35",
                  "",
                  "",
                  "",
                  "",
                  "",
                  "",
                  "",
                  "",
                  "Error 44",
                  "",
                  "",
                  "",
                  "",
                  "",
                  "",
                  "",
                  "",
                  "Error 53",
                  "",
                  "",
                  "",
                  "",
                  "",
                  "",
                  "",
                  "",
                  "Error 62",
                  "",
                  "",
                  "",
                  "",
                  "",
                  "",
                  "",
                  "",
                  "Error 71",
                  "",
                  "",
                  "",
                  "",
                  "",
                  "",
                  "",
                  "",
                  "Error 80",
                  "",
                  "",
                  "",
                  "",
                  "",
                  "",
                  "",
                  "",
                  "Error 89",
                  "",
                  "",
                  "",
                  "",
                  "",
                  "",
                  "",
                  "",
                  "Error 98",
                  "",
                  "",
                  "",
                  "",
                  "",
                  "",
                  "",
                  "",
                  "Error 107",
                  "",
                  "",
                  "",
                  "",
                  "",
                  "",
                  "",
                  "",
                  "Error 116",
                  "",
                  "",
                  "",
                  "",
                  "",
                  "",
                  "",
                  "",
                  "Error 125",
                  "",
                  "",
                  "",
                  "",
                  "",
                  "",
                  "",
                ]),
              ),
            ),
            Property(
              name: "HasReplacedValue",
              values: BitArray(
                bit_count: 100,
                bytes: [
                  1,
                  0,
                  0,
                  1,
                  0,
                  16,
                  1,
                  0,
                  16,
                  1,
                  0,
                  16,
                  0,
                ],
              ),
            ),
          ],
        ),
      ],
    ),
  ],
)
