tests/ported/snapshots/tests__ported__c_tests__sample_100_date.snap
---
source: tests/ported/c_tests.rs
expression: sbdf
---
Sbdf(
  file_header: FileHeader(
    major_version: 1,
    minor_version: 0,
  ),
  table_metadata: TableMetadata(
    metadata: [
      Metadata(
        name: "SbdfTest.TableMetaDate",
        value: Date(49923043200000),
        default_value: None,
      ),
    ],
    columns: [
      ColumnMetadata(
        name: "Date",
        ty: Date,
        other: [
          Metadata(
            name: "SbdfTest.ColumnMetaDate0",
            value: Date(49923043200000),
            default_value: None,
          ),
        ],
      ),
    ],
  ),
  table_slices: [
    TableSlice(
      column_slices: [
        ColumnSlice(
          values: Plain(
            value: DateArray([
              49923129600000,
              49923129600000,
              49923043200000,
              49923129600000,
              49923129600000,
              49923043200000,
              49923129600000,
              49923129600000,
              49923129600000,
              49923129600000,
              49923129600000,
              49923043200000,
              49923043200000,
              49923129600000,
              49923129600000,
              49923129600000,
              49923129600000,
              49923129600000,
              49923129600000,
              49923043200000,
              49923043200000,
              49923129600000,
              49923129600000,
              49923129600000,
              49923129600000,
              49923129600000,
              49923043200000,
              49923129600000,
              49923129600000,
              49923043200000,
              49923129600000,
              49923129600000,
              49923129600000,
              49923043200000,
              49923216000000,
              49923216000000,
              49923216000000,
              49923216000000,
              49923043200000,
              49923216000000,
              49923043200000,
              49923216000000,
              49923216000000,
              49923216000000,
              49923216000000,
              49923216000000,
              49923216000000,
              49923043200000,
              49923216000000,
              49923216000000,
              49923216000000,
              49923216000000,
              49923216000000,
              49923216000000,
              49923043200000,
              49923216000000,
              49923043200000,
              49923216000000,
              49923216000000,
              49923216000000,
              49923216000000,
              49923043200000,
              49923216000000,
              49923216000000,
              49923216000000,
              49923043200000,
              49923302400000,
              49923302400000,
              49923043200000,
              49923302400000,
              49923302400000,
              49923302400000,
              49923302400000,
              49923302400000,
              49923043200000,
              49923043200000,
              49923302400000,
              49923302400000,
              49923302400000,
              49923302400000,
              49923302400000,
              49923302400000,
              49923043200000,
              49923043200000,
              49923302400000,
              49923302400000,
              49923302400000,
              49923302400000,
              49923302400000,
              49923043200000,
              49923302400000,
              49923302400000,
              49923043200000,
              49923302400000,
              49923302400000,
              49923302400000,
              49923043200000,
              49923302400000,
              49923302400000,
              49923388800000,
            ]),
          ),
          properties: [
            Property(
              name: "IsInvalid",
              values: BitArray(
                bit_count: 100,
                bytes: [
                  4,
                  8,
                  16,
                  32,
                  64,
                  128,
                  2,
                  4,
                  8,
                  16,
                  32,
                  64,
                  128,
                ],
              ),
            ),
            Property(
              name: "ErrorCode",
              values: Plain(
                value: StringArray([
                  "",
                  "",
                  "Error 35",
                  "",
                  "",
                  "",
                  "",
                  "",
                  "",
                  "",
                  "",
                  "Error 44",
                  "",
                  "",
                  "",
                  "",
                  "",
                  "",
                  "",
                  "",
                  "Error 53",
                  "",
                  "",
                  "",
                  "",
                  "",
                  "",
                  "",
                  "",
                  "Error 62",
                  "",
                  "",
                  "",
                  "",
                  "",
                  "",
                  "",
                  "",
                  "Error 71",
                  "",
                  "",
                  "",
                  "",
                  "",
                  "",
                  "",
                  "",
                  "Error 80",
                  "",
                  "",
                  "",
                  "",
                  "",
                  "",
                  "",
                  "",
                  "Error 89",
                  "",
                  "",
                  "",
                  "",
                  "",
                  "",
                  "",
                  "",
                  "Error 98",
                  "",
                  "",
                  "",
                  "",
                  "",
                  "",
                  "",
                  "",
                  "Error 107",
                  "",
                  "",
                  "",
                  "",
                  "",
                  "",
                  "",
                  "",
                  "Error 116",
                  "",
                  "",
                  "",
                  "",
                  "",
                  "",
                  "",
                  "",
                  "Error 125",
                  "",
                  "",
                  "",
                  "",
                  "",
                  "",
                  "",
                ]),
              ),
            ),
            Property(
              name: "HasReplacedValue",
              values: BitArray(
                bit_count: 100,
                bytes: [
                  1,
                  0,
                  0,
                  1,
                  0,
                  16,
                  1,
                  0,
                  16,
                  1,
                  0,
                  16,
                  0,
                ],
              ),
            ),
          ],
        ),
      ],
    ),
  ],
)
