tests/ported/snapshots/tests__ported__c_tests__sample_100_decimal.snap
---
source: tests/ported/c_tests.rs
expression: sbdf
---
Sbdf(
  file_header: FileHeader(
    major_version: 1,
    minor_version: 0,
  ),
  table_metadata: TableMetadata(
    metadata: [
      Metadata(
        name: "SbdfTest.TableMetaDecimal",
        value: Decimal((119, 26, 5, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 56, 48)),
        default_value: None,
      ),
    ],
    columns: [
      ColumnMetadata(
        name: "Decimal",
        ty: Decimal,
        other: [
          Metadata(
            name: "SbdfTest.ColumnMetaDecimal0",
            value: Decimal((119, 26, 5, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 56, 48)),
            default_value: None,
          ),
        ],
      ),
    ],
  ),
  table_slices: [
    TableSlice(
      column_slices: [
        ColumnSlice(
          values: Plain(
            value: DecimalArray([
              (87, 105, 168, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 56, 48),
              (251, 89, 17, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 58, 48),
              (0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 64, 48),
              (70, 95, 18, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 58, 48),
              (51, 211, 188, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 56, 48),
              (0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 64, 48),
              (33, 8, 199, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 56, 48),
              (150, 10, 2, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 60, 48),
              (15, 61, 209, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 56, 48),
              (39, 111, 21, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 58, 48),
              (253, 113, 219, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 56, 48),
              (0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 64, 48),
              (0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 64, 48),
              (235, 166, 229, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 56, 48),
              (189, 121, 23, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 58, 48),
              (217, 219, 239, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 56, 48),
              (8, 127, 24, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 58, 48),
              (199, 16, 250, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 56, 48),
              (83, 132, 25, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 58, 48),
              (0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 64, 48),
              (0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 64, 48),
              (158, 137, 26, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 58, 48),
              (163, 122, 14, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 56, 48),
              (233, 142, 27, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 58, 48),
              (145, 175, 24, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 56, 48),
              (52, 148, 28, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 58, 48),
              (0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 64, 48),
              (127, 153, 29, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 58, 48),
              (109, 25, 45, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 56, 48),
              (0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 64, 48),
              (91, 78, 55, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 56, 48),
              (21, 164, 31, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 58, 48),
              (73, 131, 65, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 56, 48),
              (0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 64, 48),
              (96, 169, 32, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 58, 48),
              (55, 184, 75, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 56, 48),
              (171, 174, 33, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 58, 48),
              (37, 237, 85, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 56, 48),
              (0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 64, 48),
              (0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 128, 0, 0, 64, 48),
              (0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 64, 48),
              (65, 185, 35, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 58, 48),
              (1, 87, 106, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 56, 48),
              (140, 190, 36, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 58, 48),
              (239, 139, 116, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 56, 48),
              (215, 195, 37, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 58, 48),
              (221, 192, 126, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 56, 48),
              (0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 64, 48),
              (203, 245, 136, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 56, 48),
              (109, 206, 39, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 58, 48),
              (185, 42, 147, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 56, 48),
              (44, 21, 4, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 60, 48),
              (167, 95, 157, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 56, 48),
              (3, 217, 41, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 58, 48),
              (0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 64, 48),
              (149, 148, 167, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 56, 48),
              (0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 64, 48),
              (131, 201, 177, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 56, 48),
              (153, 227, 43, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 58, 48),
              (113, 254, 187, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 56, 48),
              (228, 232, 44, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 58, 48),
              (0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 64, 48),
              (95, 51, 198, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 56, 48),
              (47, 238, 45, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 58, 48),
              (77, 104, 208, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 56, 48),
              (0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 64, 48),
              (59, 157, 218, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 56, 48),
              (197, 248, 47, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 58, 48),
              (0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 64, 48),
              (16, 254, 48, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 58, 48),
              (23, 7, 239, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 56, 48),
              (91, 3, 50, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 58, 48),
              (5, 60, 249, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 56, 48),
              (119, 26, 5, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 60, 48),
              (0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 64, 48),
              (0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 64, 48),
              (241, 13, 52, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 58, 48),
              (225, 165, 13, 2, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 56, 48),
              (60, 19, 53, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 58, 48),
              (207, 218, 23, 2, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 56, 48),
              (135, 24, 54, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 58, 48),
              (0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 128, 0, 0, 64, 48),
              (0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 64, 48),
              (0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 64, 48),
              (171, 68, 44, 2, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 56, 48),
              (29, 35, 56, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 58, 48),
              (153, 121, 54, 2, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 56, 48),
              (104, 40, 57, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 58, 48),
              (135, 174, 64, 2, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 56, 48),
              (0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 64, 48),
              (117, 227, 74, 2, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 56, 48),
              (254, 50, 59, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 58, 48),
              (0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 64, 48),
              (73, 56, 60, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 58, 48),
              (81, 77, 95, 2, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 56, 48),
              (194, 31, 6, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 60, 48),
              (0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 64, 48),
              (63, 130, 105, 2, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 56, 48),
              (223, 66, 62, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 58, 48),
              (45, 183, 115, 2, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 56, 48),
            ]),
          ),
          properties: [
            Property(
              name: "IsInvalid",
              values: BitArray(
                bit_count: 100,
                bytes: [
                  4,
                  8,
                  16,
                  32,
                  64,
                  128,
                  2,
                  4,
                  8,
                  16,
                  32,
                  64,
                  128,
                ],
              ),
            ),
            Property(
              name: "ErrorCode",
              values: Plain(
                value: StringArray([
                  "",
                  "",
                  "Error 35",
                  "",
                  "",
                  "",
                  "",
                  "",
                  "",
                  "",
                  "",
                  "Error 44",
                  "",
                  "",
                  "",
                  "",
                  "",
                  "",
                  "",
                  "",
                  "Error 53",
                  "",
                  "",
                  "",
                  "",
                  "",
                  "",
                  "",
                  "",
                  "Error 62",
                  "",
                  "",
                  "",
                  "",
                  "",
                  "",
                  "",
                  "",
                  "Error 71",
                  "",
                  "",
                  "",
                  "",
                  "",
                  "",
                  "",
                  "",
                  "Error 80",
                  "",
                  "",
                  "",
                  "",
                  "",
                  "",
                  "",
                  "",
                  "Error 89",
                  "",
                  "",
                  "",
                  "",
                  "",
                  "",
                  "",
                  "",
                  "Error 98",
                  "",
                  "",
                  "",
                  "",
                  "",
                  "",
                  "",
                  "",
                  "Error 107",
                  "",
                  "",
                  "",
                  "",
                  "",
                  "",
                  "",
                  "",
                  "Error 116",
                  "",
                  "",
                  "",
                  "",
                  "",
                  "",
                  "",
                  "",
                  "Error 125",
                  "",
                  "",
                  "",
                  "",
                  "",
                  "",
                  "",
                ]),
              ),
            ),
            Property(
              name: "HasReplacedValue",
              values: BitArray(
                bit_count: 100,
                bytes: [
                  1,
                  0,
                  0,
                  1,
                  0,
                  16,
                  1,
                  0,
                  16,
                  1,
                  0,
                  16,
                  0,
                ],
              ),
            ),
          ],
        ),
      ],
    ),
  ],
)
